# linux_labs

./: README.md
lab1/testing/: CMakeLists.txt  main.cpp
lab1/untitled/: CMakeLists.txt  Number.h
lab1/vector_library/: CMakeLists.txt
testing_libraries/: CMakeLists.txt  main.cpp
testing_libraries/cmake/: FindNumLib.cmake  FindVecLib.cmake
testing_libraries/libraries/vector/include/: Vector.h
untitled/: CMakeLists.txt  NumSource.cpp  main.cpp
vector_library/: CMakeLists.txt  Vector.cpp
vector_library/cmake/: FindNumLib.cmake
vector_library/libraries/number/include/: Number.h
